--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'PokemonHollow';
+  src: url('./fonts/PokemonHollow.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'PokemonSolid';
+  src: url('./fonts/PokemonSolid.ttf') format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,14 +26,20 @@ code {
   text-align: center;
 }
 
-.App-header {
+.App-title {
+  font-family: 'PokemonSolid';
+  color: #FFCB05;
+  text-shadow: -1px 0 #3D7DCA, 0 1px #3D7DCA, 1px 0 #003A70, 0 -1px #003A70;
+  letter-spacing: 0.2rem;
+}
+
+.App-content {
   background-color: #282c34;
   color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
 }
 
