--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,16 @@
 }
 
 body {
-  margin: 0;
+  background-color: #282c34;
+  color: white;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-size: calc(10px + 2vmin);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
@@ -34,17 +38,19 @@ code {
 }
 
 .App-content {
-  background-color: #282c34;
-  color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: calc(10px + 2vmin);
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.toolbar-icon {
+  max-width: 32px;
+  max-height: 32px;
 }
 
 .flexbox {
