feat: add advanced add dialog

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,10 @@ code {
   color: #61dafb;
 }
 
+.default-input-height {
+  height: 56px;
+}
+
 .canvas-wrapper {
   /* overflow: scroll;
   max-width: 100vw;
