feat: adjust button style

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #282c34;
+  background-color: #5082e8;
   color: white;
 
   font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
